# codeSearch

./: Cargo.toml  LICENSE  README.md
docs/: agent-first-refactor-execution-plan.md  code-search-poc.md  search-implementation.md  sweep-read-file-optimization.md
src/: lib.rs  main.rs  model.rs  parser.rs  service.rs  tantivy_search.rs  text.rs
src/output/: json.rs  mod.rs  response.rs  text.rs
src/parser/: go.rs  mod.rs  rust.rs  typescript.rs
src/search/: discovery.rs  mod.rs  ranking.rs  trace.rs  validation.rs
