[package]
name = "code-search"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ignore = "0.4"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.25.0"
tree-sitter = "0.26.7"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.1"
tree-sitter-typescript = "0.23.2"
